--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body
 }
 .active, .menu-bar ul li:hover
 {
-    background: #2bab0d;
+    background: #FF1493;
     border-radius: 3px;
 }
 .menu-bar .fa
